fixed issue of overflow within card

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ grid-row: 1/2;
 
 .header{
     background-color: #f5f5f4;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 4px 4px -2px rgba(0, 0, 0, 0.5);
 }
 
 .header .icon{
@@ -212,7 +212,7 @@ grid-row: 1/2;
 #cards-grid{
     grid-row: 1/3;
     grid-column: 1/3;
-    outline: 2px solid red;
+    
 }
 
 #side-content{
@@ -244,10 +244,13 @@ h3{
 .card{
     display: flex;
     flex-direction: row;
-    outline: 2px solid red;
+    
     border-radius: var(--standar-border-radius);
+    box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
+    overflow:hidden;
 }
 .card-color{
+    /*Just a tiny amount of overflow after border raidus*/
     background-color: #4f4ade;
     height: 100%;
     width: 15px;
@@ -259,7 +262,7 @@ h3{
     align-items: center;
     padding: var(--light-padding);
     gap: 30px;
-    outline: 2px solid purple;
+    
 }
 
 .card-text{
